@@ -1,3 +1,7 @@
+2016-02-29  Claudiu Zissulescu  <Claudiu.Zissulescu@synopsys.com>
+
+	* config/tc-arc.c: Enable code density instructions for ARC EM.
+
 2016-02-26  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ld/19645
