@@ -1,3 +1,10 @@
+2016-02-29  Cupertino Miranda <Cupertino.Miranda@synopsys.com>
+
+	* elf32-arc.c (arc_elf_final_write_processing): Add condition to
+	the flag change.
+        (elf_arc_relocate_section): Fixes and conditions to support PIE.
+	Assert for code sections dynamic relocs.
+
 2016-02-26  Renlin Li  <renlin.li@arm.com>
 
 	* elfnn-aarch64.c (elfNN_aarch64_howto_table): Fix signed overflow
